Added static html files for each page

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,13 @@
   <p>
     Je suis dans le home page
   </p>
-  <a href="{{ url_for('searchRoute') }}"> Search page </a>
+  <a href="{{ url_for('homeRoute') }}">Home page</a>
+  <br>
+  <a href="{{ url_for('loginRoute') }}"> Login page</a>
+  <br>
+  <a href="{{ url_for('registrationRoute') }}"> Registration page</a>
+  <br>
+  <a href="{{ url_for('resultsRoute') }}"> Results page</a>
+  <br>
+  <a href="{{ url_for('bookRoute') }}"> Book page</a>
 {% endblock %}
