--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
 
 {% block body %}
   <p>
-    Je suis dans le search page
+    This is the results page
   </p>
-  <a href="{{ url_for('homeRoute') }}"> Retour </a>
+  <a href="{{ url_for('homeRoute') }}"> Return to home page </a>
 {% endblock %}
