--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
 {% block body %}
   <p>
-    Je suis dans le home page
+    This is the home and also the search page.
   </p>
   <a href="{{ url_for('homeRoute') }}">Home page</a>
   <br>
@@ -17,4 +17,12 @@
   <a href="{{ url_for('resultsRoute') }}"> Results page</a>
   <br>
   <a href="{{ url_for('bookRoute') }}"> Book page</a>
+
+  <div class="ui search">
+    <div class="ui icon input">
+      <input class="prompt" type="text" placeholder="Enter book">
+      <i class="search icon"></i>
+    </div>
+  </div>
+
 {% endblock %}
