--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,4 +9,25 @@
     This is the registration page
   </p>
   <a href="{{ url_for('homeRoute') }}"> Go to home page </a>
+  
+  <form class="ui form">
+    <div class="inline field">
+      <label>First name</label>
+      <input type="text" name="first-name" placeholder="First name">
+    </div>
+    <div class="inline field">
+      <label>Last name</label>
+      <input type="text" name="last-name" placeholder="Last name">
+    </div>
+    <div class="inline field">
+      <label>Email</label>
+      <input type="text" name="email" placeholder="Email">
+    </div>
+    <div class="inline field">
+      <label>Password</label>
+      <input type="text" name="password" placeholder="Password">
+    </div>
+    <button class="ui buttton" type="submit">Submit</button>
+  </form>
+  
 {% endblock %}
