--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,13 @@
 
 {% block header %}
   {{headerTitle}}
+  <h6>Welcome {{userName}} </h6>
 {% endblock %}
 
 {% block body %}
   <p>
     This is the home and also the search page.
   </p>
-  <a href="{{ url_for('homeRoute') }}">Home page</a>
-  <br>
   <a href="{{ url_for('loginRoute') }}"> Login page</a>
   <br>
   <a href="{{ url_for('registrationRoute') }}"> Registration page</a>
