--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,18 @@
-{% extends "layout.html" %}
- 
-{% block header %}
-  {{ headerTitle }}
-{% endblock %} 
-
-{% block body %}
+{% extends "layout.html" %} {% block header %}
+{{ headerTitle }}
+{% endblock %} {% block body %}
 <p>
   This is the login page
 </p>
-<a href="{{ url_for('homeRoute') }}"> Go to home page </a>
+<a href="{{ url_for('registrationRoute') }}"> Not yet a member? Registrer</a>
 
 <div class="ui middle aligned center aligned grid">
   <div class="colummn">
-    <form class="ui large form">
+    <form
+      class="ui large form"
+      action="{{ url_for('homeRoute') }}"
+      method="post"
+    >
       <div class="ui stacked segment">
         <div class="field">
           <div class="ui left icon input">
@@ -26,7 +26,7 @@
             <input type="password" name="password" placeholder="Password" />
           </div>
         </div>
-        <div class="ui fluid large teal submit button">Login</div>
+          <button class="ui fluid large teal submit button">Login</button>
       </div>
 
       <div class="ui error message"></div>
