--- a/templates/registration.html
+++ b/templates/registration.html
@@ -8,7 +8,7 @@
   <p>
     This is the registration page
   </p>
-  <a href="{{ url_for('homeRoute') }}"> Go to home page </a>
+  <a href="{{ url_for('loginRoute') }}"> Go to login page </a>
   
   <form class="ui form">
     <div class="inline field">
