--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,12 @@
   </head>
 
   <body>
-    <h1>{% block header %} {% endblock %}</h1>
-
-    {% block body %} {% endblock %}
+    <div class="ui two column centered grid">
+      <div class="row"></div>
+      <div class="column">
+        <h1>{% block header %} {% endblock %}</h1>
+        {% block body %} {% endblock %}
+      </div>
+    </div>
   </body>
 </html>
